Added method to get the user profile logged in and sign out
