# routes/api.php
@@ -17,8 +17,13 @@ use Illuminate\Support\Facades\Route;
 */
 
 Route::post('/auth/login', [AuthController::class, 'login'])->name('login');
+Route::post('/auth/register', [AuthController::class, 'register']);
 
 Route::group(['middleware' => 'auth:api', 'verified'], function() {    
+    //Auth
+    Route::get('/auth/profile', [AuthController::class, 'profile']);
+    Route::post('/auth/logout', [AuthController::class, 'logout']);
+
     //User
     Route::get('/users', [UserController::class, 'index']);
 });
